hphp/test/zend/good/Zend/tests/error_reporting09.php.expectf
Fatal error: Uncaught exception 'UndefinedVariableException' with message 'Undefined variable: undef' in %s/error_reporting09.php:9
Stack trace:
%A
